gatekeeper/templates/no-root-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snorunasroot
spec:
  crd:
    spec:
      names:
        kind: K8sNoRunAsRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snorunasroot
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container_has_non_root(container)
          not pod_has_non_root
          msg := sprintf("BLOQUE : conteneur '%v' ne garantit pas execution non-root.", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("BLOQUE : conteneur '%v' force runAsUser 0 (root).", [container.name])
        }
        container_has_non_root(container) {
          container.securityContext.runAsNonRoot == true
        }
        pod_has_non_root {
          input.review.object.spec.securityContext.runAsNonRoot == true
        }
